# JellyGraph

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
.github/: cmake-single-platform.yml
.github/workflows/: jellyGraph.yml
src/Algorithms/: GraphAlgorithms.cpp  GraphAlgorithms.hpp
src/GraphImpl/: DirectedListGraph.hpp  DirectedMatrixGraph.hpp  GraphPrimitives.cpp  GraphPrimitives.hpp  ListGraph.cpp  ListGraph.hpp  MatrixGraph.cpp  MatrixGraph.hpp
src/GraphImplementations/: DirectedListGraph.hpp  DirectedMatrixGraph.hpp  ListGraph.hpp  MatrixGraph.hpp  WeightedListGraph.hpp
src/IO/: GraphSerialization.hpp
src/Measures/: GraphMeasures.cpp  GraphMeasures.hpp
src/Primitives/: DirectedGraphPrimitives.hpp  GraphPrimitives.hpp  WeightedGraphPrimitives.hpp
src/Utils/: Concepts.hpp  DefaultTypes.hpp  Exceptions.hpp  NameIndexMap.hpp  UnderlyingIndexType.hpp
tests/: main.cpp  testDirectedGraphs.cpp  testGraph.cpp  testGraphAlgorithms.cpp  testGraphIO.cpp  testGraphMeasures.cpp  testGraphPrimitives.cpp  testGraphs.cpp
tests/Graphs/DimacsGraphs/: mediumSize.gr  valid.dimacs
